--- a/index.html
+++ b/index.html
@@ -45,17 +45,130 @@
                         </div>
                     </div>
 
+                    <!-- ELEMENTOS INFERIORES -->
+
                 </div>
-                <div class="box">1</div>
+                <div class="box"></div>
                 <div class="box box-central">
                     <img class="ninten-logo" src="./img/Nintendo_Gray.svg" alt="nintendo-logo">
                 </div>
-                <div class="box">3</div>
-                <div class="box box-left">4</div>
-                <div class="box box-right">5</div>
-                <div class="box">6</div>
-                <div class="box box-central">7</div>
-                <div class="box">8</div>
+                <div class="box box3"></div>
+                <div class="box box-left">
+
+                    <!-- CRUCETA -->
+
+                    <div class="cross">
+                        <div class="cross1 cross-triangles"></div>
+                        <div class="cross2 cross-top cross-triangles">
+                            <div class="triangle triangle-top"></div>
+                        </div>
+                        <div class="cross1 cross-triangles"></div>
+                        <div class="cross2 cross-left cross-triangles">
+                            <div class="triangle triangle-left"></div>
+                        </div>
+                        <div class="cross2 cross-central cross-triangles">
+                            <div class="circle-cross"></div>
+                        </div>
+                        <div class="cross2 cross-right cross-triangles">
+                            <div class="triangle triangle-right"></div>
+                        </div>
+                        <div class="cross1 cross-triangles"></div>
+                        <div class="cross2 cross-bottom cross-triangles">
+                            <div class="triangle triangle-bottom"></div>
+                        </div>
+                        <div class="cross1 cross-triangles"></div>
+                    </div>
+                </div>
+                <div class="box box-right">
+                    <div class="button button-b">B</div>
+                    <div class="button button-a">A</div>
+                </div>
+                <div class="box box-6">
+
+                    <div class="select-start">
+                        <div class="bt-st-top">
+                            <div class="button-st bt-st select-button"></div>
+                            <div class="button-st bt-st start-button"></div>
+                        </div>
+                        <div class="bt-st-bottom">                        
+                            <div class="button-st st-text select">SELECT</div>
+                            <div class="button-st st-text start">START</div>
+                        </div>
+
+                    </div>
+
+                    <!-- ALTAVOZ -->
+
+                    <div class="speaker">
+                    <div class="speaker-grid">
+                        <div class="speaker-dots dot1 dot-n"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2 dot-n"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1 dot-n"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot1"></div>
+                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dot2 dot-n"></div>
+                    </div>
+                    </div>
+                </div>
+
             </div>
                 <div class="gb-body2"></div>
 
