--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <!-- PANTALLA -->
 
                     <div class="screen">
-                        <div class="bezel bezel1">1</div>
+                        <div class="bezel bezel1"></div>
                         <div class="bezel bezel2">
                             <div class="bezel-left-t">
                                 <div class="led"></div>
@@ -38,8 +38,8 @@
                             </div>
                             <div class="bezel-left-b">POWER</div>
                         </div>
-                        <div class="bezel in-screen">3</div>
-                        <div class="bezel">4</div>
+                        <div class="bezel in-screen"></div>
+                        <div class="bezel"></div>
                         <div class="bezel bezel5">
                             <img class="logo1" src="./img/gb-logo.png" alt="logo-gbc">
                         </div>
@@ -80,8 +80,12 @@
                     </div>
                 </div>
                 <div class="box box-right">
-                    <div class="button button-b">B</div>
-                    <div class="button button-a">A</div>
+                    <div class="button button-b">
+                        <p class='button-txt'>B</p>
+                    </div>
+                    <div class="button button-a">
+                        <p class="button-txt">A</p>
+                    </div>
                 </div>
                 <div class="box box-6">
 
