--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <div class="main">
 
         <!-- // CUERPO DE LA CONSOLA // -->
-    
+
+        <div class="left-details">
+            <div class="left-details-1"></div>
+            <div class="left-details-2"></div>
+            <div class="left-details-3"></div>
+        </div>
+
+
         <div class="gb-body1">
             <div class="gb-body2"></div>
 
@@ -28,7 +35,10 @@
                 <div class="box box-top">
 
                     <!-- PANTALLA -->
-
+                    <div class="details-top">
+                        <div class="triangle triangle-top-detail"></div>
+                        <p class="text-top">COMM.</p>
+                    </div>
                     <div class="screen">
                         <div class="bezel bezel1"></div>
                         <div class="bezel bezel2">
@@ -106,25 +116,25 @@
                     <div class="speaker">
                     <div class="speaker-grid">
                         <div class="speaker-dots dot1 dot-n"></div>
-                        <div class="speaker-dots dot2"></div>
-                        <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
+                        <div class="speaker-dots dotlight1 dot1"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
                         <div class="speaker-dots dot1"></div>
                         <div class="speaker-dots dot2"></div>
                         <div class="speaker-dots dot1"></div>
                         <div class="speaker-dots dot2 dot-n"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
+                        <div class="speaker-dots dotlight1 dot1"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
+                        <div class="speaker-dots dotlight1 dot1"></div>
                         <div class="speaker-dots dot2"></div>
                         <div class="speaker-dots dot1"></div>
                         <div class="speaker-dots dot2"></div>
                         <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot2"></div>
-                        <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot2"></div>
-                        <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot2"></div>
-                        <div class="speaker-dots dot1"></div>
-                        <div class="speaker-dots dot2"></div>
+                        <div class="speaker-dots dotlight1 dot1"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
+                        <div class="speaker-dots dotlight1 dot1"></div>
+                        <div class="speaker-dots dotlight2 dot2"></div>
                         <div class="speaker-dots dot1"></div>
                         <div class="speaker-dots dot2"></div>
                         <div class="speaker-dots dot1"></div>
@@ -175,10 +185,14 @@
 
             </div>
                 <div class="gb-body2"></div>
-
-            
-
         </div>
+        <div class="right-details">
+            <div class="right-details-1"></div>
+            <div class="right-details-1"></div>
+            <div class="right-details-1"></div>
+            <div class="right-details-1"></div>
+            </div>
+
     </div>
 
     <!-- /// PIE DE LA WEB /// -->
