consola terminada con hover

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- /// CUERPO DE LA WEB /// -->
 
     <div class="main">
+        <div class="body-gb">
 
         <!-- // CUERPO DE LA CONSOLA // -->
 
@@ -192,11 +193,7 @@
             <div class="right-details-1"></div>
             <div class="right-details-1"></div>
             </div>
-
+        </div>
     </div>
-
-    <!-- /// PIE DE LA WEB /// -->
-
-    <div class="footer"></div>
 </body>
 </html>
