--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                             </div>
                             <div class="bezel-left-b">POWER</div>
                         </div>
-                        <div class="bezel in-screen"></div>
+                        <div class="bezel in-screen" id="interior-screen"></div>
                         <div class="bezel"></div>
                         <div class="bezel bezel5">
                             <img class="logo1" src="./img/gb-logo.png" alt="logo-gbc">
                         </div>
                     </div>
-
+                
                     <!-- ELEMENTOS INFERIORES -->
 
                 </div>
